Fixed 'experience' section mobile layout.

--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,6 @@ button {
   }
 
   #experience{
-    height: fit-content;
+    height: 550px;
   }
 }
